// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input /> should render <input> tag 1`] = `
<input
  class="StyledInput-ok3pz6-0 jWsUyV"
/>
`;

exports[`<Input /> should render correctly with custom props 1`] = `
<input
  class="StyledInput-ok3pz6-0 kZKvHb"
/>
`;

exports[`<Input /> should render correctly with default props 1`] = `
<input
  class="StyledInput-ok3pz6-0 jWsUyV"
/>
`;
